Completed the layout of the game- that was the easy part. Can't get my if/else statements to function or display the correct message when the player guesses too high or too low of a number, even the right answer. The rest is so far incomplete.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,33 @@ body {
     border-bottom-right-radius: 10%;
 }
 
-.form-control {
+.guess {
+    margin-top: 90px;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 55px;
+    color: #00d6ff;
+    text-shadow: 3px 2px red;
+}
+
+.guess-form {
     margin: 0 auto;
+    margin-top: 20px;
     width: 40%;
+    padding-left: 10px;
+}
+
+.guesstext {
+    margin: 0 auto;
+    margin-top: 5px;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 28px;
+    color: #808080;
+}
+
+.winloss {
+    margin: 0 auto;
+    margin-top: -10px;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 22px;
+    color: #808080;
 }
